Fix backgorund styling of all pokemon to fit on mobile tablet and desktop, and fix b ackground and gif styling of charizard.

--- a/css/index.css
+++ b/css/index.css
@@ -1417,6 +1417,7 @@ nav .mobile-menu-btn {
   flex-direction: column-reverse;
   max-width: 1100px;
   margin: 0 auto;
+  max-height: 150rem;
 }
 .featured-main-container .featured-pokemon .character-links {
   display: flex;
@@ -1557,13 +1558,15 @@ nav .mobile-menu-btn {
   }
 }
 .featured-main-container .featured-pokemon .character-items .pokemonSlides .pokemon .pokemon-images #charizard {
-  height: 45rem;
-  margin-top: -3rem;
+  height: 35rem;
+  margin-top: -5rem;
+  margin-left: -15rem;
 }
 @media (max-width: 800px) {
   .featured-main-container .featured-pokemon .character-items .pokemonSlides .pokemon .pokemon-images #charizard {
     height: 30rem;
-    margin-bottom: -5rem;
+    margin-top: -2rem;
+    margin-left: 10rem;
   }
 }
 .featured-main-container .featured-pokemon .character-items .pokemonSlides .pokemon .pokemon-images #jigglypuff {
@@ -1577,22 +1580,25 @@ nav .mobile-menu-btn {
 }
 .featured-main-container .featured-pokemon .character-items .pokemonSlides .pokemon .pokemon-images .background {
   z-index: -1;
-  height: 90rem;
+  height: 50rem;
   position: absolute;
-  margin-top: -60rem;
-  margin-left: 0;
-  right: -40rem;
+  margin-top: -40rem;
+  margin-left: -15rem;
 }
 @media (max-width: 800px) {
   .featured-main-container .featured-pokemon .character-items .pokemonSlides .pokemon .pokemon-images .background {
-    height: 80rem;
+    height: 30rem;
+    margin-top: -25rem;
+    margin-left: -5rem;
   }
 }
+.featured-main-container .featured-pokemon .character-items .pokemonSlides .pokemon .pokemon-images #charizard-bg {
+  margin-left: -25rem;
+}
 @media (max-width: 800px) {
-  .featured-main-container .featured-pokemon .character-items .pokemonSlides .pokemon .pokemon-images .background {
-    height: 50rem;
-    margin-top: -40rem;
-    right: -20rem;
+  .featured-main-container .featured-pokemon .character-items .pokemonSlides .pokemon .pokemon-images #charizard-bg {
+    margin-top: -25rem;
+    margin-left: 5rem;
   }
 }
 .featured-main-container .featured-pokemon .character-items .pokemonSlides .pokemon .about-content {
