--- a/less/featured.less
+++ b/less/featured.less
@@ -93,6 +93,7 @@
     .featured-pokemon {
         .flex(none, none, column-reverse);
         .max-width-desktop(1100px);
+        max-height: 150rem;
 
         .character-links {
             .flex(center, center, row);
@@ -214,6 +215,7 @@
                             margin-right: 10rem;
                             height: 25rem; 
                             margin-right: 10rem;
+
                             @media @phone{
                                 height: 20rem;
                                 margin-right: 0;
@@ -222,12 +224,14 @@
                         }
 
                         #charizard{
-                            height: 45rem;
-                            margin-top: -3rem;
+                            height: 35rem;
+                            margin-top: -5rem;
+                            margin-left: -15rem;
 
                             @media @tablet{
                                 height: 30rem;
-                                margin-bottom: -5rem;
+                                margin-top: -2rem;
+                                margin-left: 10rem;
                             }
 
               
@@ -245,20 +249,24 @@
 
                         .background{
                             z-index: -1;
-                            height: 90rem;
+                            height: 50rem;
                             position: absolute;
-                            margin-top: -60rem;
-                            margin-left: 0;
-                            right: -40rem;
+                            margin-top: -40rem;
+                            margin-left: -15rem;
 
                             @media @tablet{
-                                height: 80rem;
+                                height: 30rem;
+                                margin-top: -25rem;
+                                margin-left: -5rem;
                             }
+                        }
+
+                        #charizard-bg {
+                            margin-left: -25rem;
 
                             @media @tablet{
-                                height: 50rem;
-                                margin-top: -40rem;
-                                right: -20rem;
+                                margin-top: -25rem;
+                                margin-left: 5rem;
                             }
                         }
 
